--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "ward",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A bridge between Abbott and Slack",
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": "saarons/ward",
   "dependencies": {
     "ws": "0.7.1",
     "redis": "0.12.1",
