--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "ws": "0.7.1",
     "redis": "0.12.1",
+    "winston": "1.0.0",
     "superagent": "1.2.0",
     "coffee-script": "1.9.2"
   },
