--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ward",
-  "version": "0.0.2",
+  "version": "0.1.0",
   "description": "A bridge between Abbott and Slack",
   "scripts": {
     "start": "node index.js",
@@ -9,11 +9,11 @@
   "repository": "saarons/ward",
   "dependencies": {
     "ws": "0.7.1",
-    "redis": "0.12.1",
     "winston": "1.0.0",
     "emojione": "1.4.0",
     "superagent": "1.2.0",
-    "coffee-script": "1.9.2"
+    "coffee-script": "1.9.2",
+    "pusher-client": "saarons/pusher-client-node"
   },
   "author": "Sam Aarons",
   "license": "MIT"
