--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ward",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "A bridge between Abbott and Slack",
   "scripts": {
     "start": "node index.js",
@@ -8,12 +8,12 @@
   },
   "repository": "saarons/ward",
   "dependencies": {
-    "ws": "^0.7.1",
-    "winston": "^1.0.0",
-    "emojione": "^1.5.0",
-    "superagent": "^1.2.0",
-    "coffee-script": "^1.9.2",
-    "pusher-client": "^0.2.3"
+    "ws": "^1.0.1",
+    "winston": "^2.1.1",
+    "emojione": "^2.0.1",
+    "superagent": "^1.7.1",
+    "coffee-script": "^1.10.0",
+    "pusher-client": "1.0.0"
   },
   "author": "Sam Aarons",
   "license": "MIT"
