--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   },
   "repository": "saarons/ward",
   "dependencies": {
-    "ws": "^1.0.1",
-    "winston": "^2.1.1",
-    "emojione": "^2.0.1",
-    "superagent": "^1.7.1",
+    "body-parser": "^1.14.2",
     "coffee-script": "^1.10.0",
-    "pusher-client": "1.0.0"
+    "emojione": "^2.0.1",
+    "express": "^4.13.4",
+    "pusher-client": "1.0.0",
+    "superagent": "^1.7.1",
+    "winston": "^2.1.1",
+    "ws": "^1.0.1"
   },
   "author": "Sam Aarons",
   "license": "MIT"
