--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "dependencies": {
     "body-parser": "^1.14.2",
     "coffee-script": "^1.10.0",
-    "emojione": "^2.0.1",
     "express": "^4.13.4",
+    "js-emoji": "iamcal/js-emoji",
     "pusher-client": "1.0.0",
     "superagent": "^1.7.1",
     "winston": "^2.1.1",
