--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "body-parser": "^1.14.2",
     "coffee-script": "^1.10.0",
     "express": "^4.13.4",
-    "js-emoji": "iamcal/js-emoji",
+    "js-emoji": "iamcal/js-emoji#e93c4cb77536964639a344d45639cf7f33cadea7",
     "pusher-client": "1.0.0",
     "superagent": "^1.7.1",
     "winston": "^2.1.1",
